--- a/static/style/style.css
+++ b/static/style/style.css
@@ -3,6 +3,21 @@
     src: url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
   }
 
+h1 {
+  font-family: 'Raleway', sans-serif;
+  font-size: 140px;
+  text-align: center;
+  color: rgba(255,255,255,0.9);
+  padding-top: 5%;
+  margin:0;
+}
+h3 {
+  font-family: 'Raleway', sans-serif;
+  font-size: 80px;
+  text-align: center;
+  color: rgba(255,255,255,0.6);
+  margin-top:0;
+}
 body {
     counter-reset: horizontalnumber;
     background: linear-gradient(#e66465, #9198e5);
@@ -12,6 +27,28 @@ body {
   height: 100%;
   
 }
+/* ----- ICONS ----- */
+#icons {
+  text-align: center;
+}
+#icons i {
+  font-size: 70px;
+  color:white;
+  padding: 15px;
+  margin: 10px;
+  border-radius: 50px;
+  border: 2px dotted transparent;
+  transition: 0.2s ease-in-out;
+  width: 70px;
+}
+#icons i:hover {
+  border: 2px dotted black;
+  color: black;
+}
+/*   background: linear-gradient(90deg, rgba(150,48,30,1) 0%,rgba(199,201,88,1) 10%,rgba(28,147,46,1) 20%,rgba(74,165,168,1) 30%,rgba(89,90,165,1) 40%,rgba(84,16,67,1) 50%,rgba(28,58,63,1) 60%,rgba(82,175,183,1) 70%,rgba(78,170,76,1) 80%,rgba(150,48,30,1) 90%,rgba(199,201,88,1) 100%);
+  background-size: 1000% 100%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;} */
 /* ----- CODE ----- */
 /* top */
 #titlewindow {
@@ -22,10 +59,9 @@ body {
 .codewindow {
   background: black;
   border-radius: 10px;
-  height: 400px;
   width: 70%;
   position: absolute;
-  transform: translate(20%, 60%);
+  transform: translate(20%, 30%);
   padding: 5px;
   padding-top: 30px;
   box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
@@ -55,13 +91,12 @@ body {
   width: 20px;
   padding: 0 10px;
 }
-
 .dot span {
   color: black!important;
   font-size: 12px!important;
   text-align: center;
-  line-height: 0.9;
   height: 13px;
+  line-height: 1;
   top: 3;
   width: 13px;
   border-radius: 50px;
@@ -106,4 +141,17 @@ body {
 }
 .codewindow .sentence {
   color : #D88B78;
+}
+
+@media screen (max-width: 370px) {
+
+  .codewindow {
+    transform: translateY(10%);
+  }
+  .codewindow span {
+    font-size: 24px;
+  }
+  #content {
+    height: 500px;
+  }
 }
